# macSentry

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  cli.py  install.sh  macos_security_audit.py  pyproject.toml  uninstall.sh
.github/workflows/: quality-gates.yml  smoke-tests.yml
Formula/: homebrew-tap.code-workspace  macos-security-audit.rb  macsentry.rb
checks/: __init__.py  applications.py  authentication.py  base.py  configuration.py  encryption.py  firewall.py  privacy.py  system_integrity.py
core/: __init__.py  circuit_breaker.py  injection.py  interfaces.py  resilience.py
docs/: ARCHITECTURE.md  CHECKS.md  MANUAL_TESTING_CHECKLIST.md  REMEDIATION.md
launchd/: com.macos-security-audit.plist
scripts/: lint.sh  self-update.sh  setup-dev.sh  test-deployment.sh
src/macsentry/: __init__.py  __main__.py  cli.py  macos_security_audit.py
src/macsentry/checks/: applications.py  authentication.py  base.py  configuration.py  encryption.py  firewall.py  privacy.py  system_integrity.py  types.py
src/macsentry/core/: __init__.py  injection.py  resilience.py
src/macsentry/utils/: __init__.py  reporting.py  system_info.py
tests/: conftest.py  test_applications_checks.py  test_authentication_checks.py  test_base_classes.py  test_circuit_breaker.py  test_command_execution.py  test_configuration_checks.py  test_dependency_injection.py  test_encryption_checks.py  test_firewall_checks.py  test_integration_critical.py  test_parsers.py  test_performance.py  test_privacy_checks.py  test_resilience.py  test_smoke.py  test_system_integrity_checks.py
utils/: commands.py  compat.py  parsers.py  reporting.py
