[project]
name = "macos-security-audit"
version = "0.1.0"
description = "Automated security auditing tool for macOS"
license = {text = "MIT"}
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pylint>=3.0",
    "flake8>=7.0",
    "flake8-bugbear",
    "flake8-comprehensions",
    "flake8-simplify",
    "mypy>=1.8",
    "bandit>=1.7",
    "semgrep>=1.50",
    "pre-commit>=3.6",
    "radon>=6.0",  # Cyclomatic complexity
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-timeout>=2.2",
    "psutil>=5.9",  # Memory profiling
    "memory-profiler>=0.61",  # Detailed memory analysis
]

# ============================================================================
# MYPY - Type Checking (enforce 90%+ type hint coverage)
# ============================================================================
[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Enforce type hints
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# Strict optional handling
no_implicit_optional = true
strict_optional = true

# Import handling
ignore_missing_imports = false
follow_imports = "normal"

# Error output
show_error_context = true
error_summary = true

[[tool.mypy.overrides]]
module = ["plistlib", "sqlite3"]
ignore_missing_imports = true

# ============================================================================
# PYLINT - Comprehensive Linting
# ============================================================================
[tool.pylint.main]
jobs = 0  # Auto-detect CPU cores
py-version = "3.10"
suggestion-mode = true
recursive = true

[tool.pylint.messages_control]
enable = [
    "all",
]
disable = [
    "locally-disabled",
    "suppressed-message",
    "too-few-public-methods",  # Common in dataclasses
    "missing-module-docstring",  # Allow for __init__.py
]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.design]
# Cyclomatic complexity limit (max 10)
max-complexity = 10
max-args = 7
max-locals = 15
max-returns = 6
max-branches = 12
max-statements = 50
max-attributes = 10
max-public-methods = 20

[tool.pylint.similarities]
min-similarity-lines = 6
ignore-comments = true
ignore-docstrings = true

[tool.pylint.basic]
good-names = ["i", "j", "k", "ex", "fp", "fd", "db", "_"]
docstring-min-length = 10

[tool.pylint.typecheck]
generated-members = ["sqlite3.*"]

# ============================================================================
# BANDIT - Security-Focused Linting
# ============================================================================
[tool.bandit]
exclude_dirs = ["tests", "venv", ".venv"]
skips = []  # Don't skip any security checks
severity = "low"  # Report all severities
confidence = "low"  # Report all confidence levels

# ============================================================================
# COVERAGE - Test Coverage
# ============================================================================
[tool.coverage.run]
source = ["checks", "utils"]
branch = true
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_empty = true

# ============================================================================
# PYTEST
# ============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"
